phpmyadmin/nginx-php-service.yml
apiVersion: v1
kind: Service
metadata:
  name: php
  labels:
    type: backend
spec:
  type: ClusterIP
  selector:
    app: php
    type: backend
  ports:
  - protocol: TCP
    port: 9000

---

apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    type: backend
spec:
  type: NodePort
  selector:
    app: nginx
    type: backend
  ports:
  - protocol: TCP
    port: 80
