phpmyadmin/phpmyadmin_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
spec:
  type: ClusterIP
  selector: 
    app: phpmyadmin
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
