phpmyadmin/phpmyadmin_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpmyadmin-ingress
spec:
  rules:
  - host: "phpmyadmin.shokoloko.dev"
    http:
      paths:
      - pathType: Prefix
        path: "/bar"
        backend:
          service:
            name: phpmyadmin-service
            port:
              number: 80
